[package]
name = "dynv6-rs"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dns-challenge"

[dependencies]
ureq = { version = "1.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
