[package]
name = "dynv6-cli"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynv6-rs = { path = ".." }
clap = { version = "3.0.0-beta.2", features = ["color", "derive", "wrap_help", "suggestions"] }
termcolor = "1.1"
